--- a/pom.xml
+++ b/pom.xml
@@ -74,11 +74,11 @@
             <scope>provided</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.jfoenix/jfoenix -->
-        <dependency>
-            <groupId>com.jfoenix</groupId>
-            <artifactId>jfoenix</artifactId>
-            <version>9.0.1</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.jfoenix</groupId>-->
+<!--            <artifactId>jfoenix</artifactId>-->
+<!--            <version>9.0.1</version>-->
+<!--        </dependency>-->
         <!-- https://mvnrepository.com/artifact/com.jfoenix/jfoenix -->
         <dependency>
             <groupId>com.jfoenix</groupId>
